# double-probing-self-attention

./: .gitignore  README.md  index.md  launcher.sh  pyproject.toml  trainer.py
core/: dataset.py  model.py  utils.py
